fixed broken ui in coreui 4

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -21,6 +21,7 @@
 }
 
 .flex-center {
+  display: flex;
   flex-direction: row;
   justify-content: center;
 }
